--- a/pages/19461.html
+++ b/pages/19461.html
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8601/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8601/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -325,7 +325,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_3dc668e1a071364dcf94ad0f83297493acbfaeca_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_f98268bf228419caa434d935a74af6cf6537670a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -592,6 +592,12 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>, a <a class='existingWikiWord' href='/nlab/show/canonical+form'>canonical form</a> is a normal form, but the converse need not hold.</p>
 
+<p>A term is weakly normalizing if there exists at least one particular sequence of rewrites that eventually yields a normal form. A rewrite has weak normalization if every term has this property.</p>
+
+<p>A term is strongly normalizing if every sequence of rewrites eventually terminates with a normal form. If every term has this property, the rewrite system has strong normalization.</p>
+
+<p>In the <a class='existingWikiWord' href='/nlab/show/lambda-calculus'>untyped lambda calculus</a> the term <math class='maruku-mathml' display='inline' id='mathml_f98268bf228419caa434d935a74af6cf6537670a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>λ</mi><mi>x</mi><mo>.</mo><mi>x</mi><mi>x</mi><mi>x</mi><mo stretchy='false'>)</mo><mo stretchy='false'>(</mo><mi>λ</mi><mi>x</mi><mo>.</mo><mi>x</mi><mi>x</mi><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\lambda x . x x x) (\lambda x . x x x)</annotation></semantics></math> is neither strongly nor weakly normalizing.</p>
+
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
@@ -601,14 +607,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on June 11, 2018 at 10:04:13.
+  Last revised on June 11, 2018 at 15:44:39.
   See the <a href="https://ncatlab.org/nlab/history/normal form" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/normal+form/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/normal+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/normal+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/normal form/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
