--- a/pages/19462.html
+++ b/pages/19462.html
@@ -611,6 +611,12 @@ margin-left: 0em;
 <li>J. Barwise, <a class='existingWikiWord' href='/nlab/show/Solomon+Feferman'>S. Feferman</a> (eds.), <em>Model-theoretic Logics</em> , Springer Heidelberg 1985 (freely available online: <a href='http://projecteuclid.org/euclid.pl/1235417263#toc'>toc</a>) .</li>
 </ul>
 
+<p>In the context of <a class='existingWikiWord' href='/nlab/show/Martin-L%C3%B6f+dependent+type+theory'>Martin-Löf type theory</a> they are discussed by</p>
+
+<ul>
+<li><span class='newWikiWord'>G. Sundholm<a href='/nlab/new/G%C3%B6ran+Sundholm'>?</a></span>, <em>Constructive Generalized Quantifiers</em> , Synthese <strong>79</strong> no.1 (1989) pp.1-12.</li>
+</ul>
+
 <p>For the use of generalized quantifiers in natural language semantics see</p>
 
 <ul>
@@ -645,14 +651,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June 12, 2018 at 11:17:09.
+  Last revised on June 12, 2018 at 12:53:40.
   See the <a href="https://ncatlab.org/nlab/history/generalized quantifier" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/generalized+quantifier" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/generalized+quantifier/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/generalized+quantifier" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/generalized+quantifier" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/generalized+quantifier" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/generalized+quantifier/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/generalized+quantifier" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/generalized+quantifier" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/generalized quantifier/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
