--- a/pages/4625.html
+++ b/pages/4625.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8607/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -452,7 +451,11 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>The <strong>empty category</strong> is <a class='existingWikiWord' href='/nlab/show/generalized+the'>the</a> <a class='existingWikiWord' href='/nlab/show/category'>category</a> with no <a class='existingWikiWord' href='/nlab/show/object'>objects</a> (and hence no <a class='existingWikiWord' href='/nlab/show/morphism'>morphisms</a>). It is a <a class='existingWikiWord' href='/nlab/show/groupoid'>groupoid</a>, so we may call it the <strong>empty groupoid</strong>. One can similarly speak of the <strong>empty <math class='maruku-mathml' display='inline' id='mathml_ca4b187b730eae0d01999cfede62fd75b2a23a6c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-category</strong>, the <strong>empty <math class='maruku-mathml' display='inline' id='mathml_ca4b187b730eae0d01999cfede62fd75b2a23a6c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoid</strong>, etc etc etc.</p>
+<p>The <strong>empty category</strong> is <a class='existingWikiWord' href='/nlab/show/generalized+the'>the</a> <a class='existingWikiWord' href='/nlab/show/category'>category</a> with no <a class='existingWikiWord' href='/nlab/show/object'>objects</a>, and hence no <a class='existingWikiWord' href='/nlab/show/morphism'>morphisms</a>, i.e. the catgegory whose <a class='existingWikiWord' href='/nlab/show/proper+class'>class</a> of objects is the <a class='existingWikiWord' href='/nlab/show/empty+set'>empty set</a>.</p>
+
+<p>This is the <a class='existingWikiWord' href='/nlab/show/initial+object'>initial object</a> in <a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a>.</p>
+
+<p>This is a <a class='existingWikiWord' href='/nlab/show/groupoid'>groupoid</a>, so we may call it the <strong>empty groupoid</strong>. One may similarly speak of the <strong>empty <a class='existingWikiWord' href='/nlab/show/n-category'>n-category</a></strong>, the <strong>empty <a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>infinity-groupoid</a></strong>, etc etc etc.</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -463,7 +466,17 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/empty+diagram'>empty diagram</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/empty+space'>empty space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/empty+diagram'>empty diagram</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/terminal+category'>terminal category</a></p>
+</li>
 </ul>
 
 <p>
@@ -471,22 +484,27 @@ margin-left: 0em;
  
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on April 21, 2017 10:52:39 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.184.222)
+  <p>
+  Last revised on June 12, 2018 at 12:11:59.
+  See the <a href="https://ncatlab.org/nlab/history/empty category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/empty+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+category/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/empty+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/empty+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+category/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/empty+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/empty category/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/empty+category" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/empty+category" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/empty+category" id="view_source" rel="nofollow">Source</a>
