--- a/pages/634.html
+++ b/pages/634.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,16 +307,220 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='definition'>Definition</h2>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> <math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> has three different <a class='existingWikiWord' href='/nlab/show/opposite+category'>opposites</a> (two independent):</p>
+<h4 id='2category_theory'>2-Category theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/2-category+theory'>2-category theory</a></strong></p>
+
+<h2 id='definitions'>Definitions</h2>
 
 <ul>
-<li>The <strong><math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>-cell dual</strong> <math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>K</mi> <mi>op</mi></msup></mrow><annotation encoding='application/x-tex'>K^{op}</annotation></semantics></math>, in which the <math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>-cells but not the <math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-cells are reversed.</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a></p>
+</li>
 
-<li>The <strong><math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-cell dual</strong> <math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>K</mi> <mi>co</mi></msup></mrow><annotation encoding='application/x-tex'>K^{co}</annotation></semantics></math>, in which the <math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-cells but not the <math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>-cells are reversed.</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/strict+2-category'>strict 2-category</a></p>
+</li>
 
-<li>The <strong>bidual</strong> <math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>K</mi> <mrow><mi>co</mi><mi>op</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>K^{co op}</annotation></semantics></math> in which both <math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>-cells and <math class='maruku-mathml' display='inline' id='mathml_a4e5aa0d407148dc568246bf7b019ec3652fc458_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-cells are reversed.</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/bicategory'>bicategory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/enriched+bicategory'>enriched bicategory</a></p>
+</li>
+</ul>
+
+<h2 id='transfors_between_2categories'>Transfors between 2-categories</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-functor'>2-functor</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pseudofunctor'>pseudofunctor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/lax+functor'>lax functor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/equivalence+of+2-categories'>equivalence of 2-categories</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/strict+2-natural+transformation'>2-natural transformation</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/lax+natural+transformation'>lax natural transformation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/icon'>icon</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/modification'>modification</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Yoneda+lemma+for+bicategories'>Yoneda lemma for bicategories</a></p>
+</li>
+</ul>
+
+<h2 id='morphisms_in_2categories'>Morphisms in 2-categories</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fully+faithful+morphism'>fully faithful morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/faithful+morphism'>faithful morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/conservative+morphism'>conservative morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pseudomonic+morphism'>pseudomonic morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/discrete+morphism'>discrete morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/eso+morphism'>eso morphism</a></p>
+</li>
+</ul>
+
+<h2 id='structures_in_2categories'>Structures in 2-categories</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adjunction'>adjunction</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/mate'>mate</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monad'>monad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cartesian+object'>cartesian object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fibration+in+a+2-category'>fibration in a 2-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/codiscrete+cofibration'>codiscrete cofibration</a></p>
+</li>
+</ul>
+
+<h2 id='limits_in_2categories'>Limits in 2-categories</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-limit'>2-limit</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-pullback'>2-pullback</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/comma+object'>comma object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/inserter'>inserter</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/inverter'>inverter</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/equifier'>equifier</a></p>
+</li>
+</ul>
+
+<h2 id='structures_on_2categories'>Structures on 2-categories</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-monad'>2-monad</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/lax-idempotent+2-monad'>lax-idempotent 2-monad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-monad'>pseudomonad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pseudoalgebra+for+a+2-monad'>pseudoalgebra for a 2-monad</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+bicategory'>monoidal 2-category</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/cartesian+bicategory'>cartesian bicategory</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gray+tensor+product'>Gray tensor product</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-category+equipped+with+proarrows'>proarrow equipment</a></p>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/2-category+theory+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_pages'>Related pages</a></li></ul></div>
+<h2 id='definition'>Definition</h2>
+
+<p>A <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> <math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> has three different <a class='existingWikiWord' href='/nlab/show/opposite+category'>opposites</a> (two independent):</p>
+
+<ul>
+<li>The <strong><math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>-cell dual</strong> <math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>K</mi> <mi>op</mi></msup></mrow><annotation encoding='application/x-tex'>K^{op}</annotation></semantics></math>, in which the <math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>-cells but not the <math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-cells are reversed.</li>
+
+<li>The <strong><math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-cell dual</strong> <math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>K</mi> <mi>co</mi></msup></mrow><annotation encoding='application/x-tex'>K^{co}</annotation></semantics></math>, in which the <math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-cells but not the <math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>-cells are reversed.</li>
+
+<li>The <strong>bidual</strong> <math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>K</mi> <mrow><mi>co</mi><mi>op</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>K^{co op}</annotation></semantics></math> in which both <math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>-cells and <math class='maruku-mathml' display='inline' id='mathml_2fc0e4705bebd45666dead84d184287ca6054ff0_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-cells are reversed.</li>
 </ul>
 
 <h2 id='related_pages'>Related pages</h2>
@@ -334,19 +537,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 17, 2016 14:17:03 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (192.195.154.58)
+  <p>
+  Last revised on June 13, 2018 at 10:14:02.
+  See the <a href="https://ncatlab.org/nlab/history/opposite 2-category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/opposite+2-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/opposite+2-category/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/opposite+2-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/opposite+2-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/opposite+2-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/opposite+2-category/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/opposite+2-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/opposite+2-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/opposite 2-category/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/opposite+2-category" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/opposite+2-category" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/opposite+2-category" id="view_source" rel="nofollow">Source</a>
